{
  "sourceLanguage" : "en",
  "strings" : {
    " and " : {

    },
    "**Resting:** %@" : {

    },
    "%@ Session" : {

    },
    "%@ with %@" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "%1$@ with %2$@"
          }
        }
      }
    },
    "%@ with no players" : {

    },
    "%lld" : {

    },
    "About" : {

    },
    "Acknowledgements" : {

    },
    "Active" : {

    },
    "Add" : {
      "comment" : "Button in items list that will cause a new item to be added",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Añadir"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ajouter"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "追加"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "添加"
          }
        }
      }
    },
    "Add Player" : {

    },
    "Add Session" : {

    },
    "Adjust Players" : {

    },
    "At least %@ are needed for this session." : {

    },
    "Cancel" : {
      "comment" : "Button title indicating that the operation should be cancelled",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Annuler"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "キャンセル"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
        }
      }
    },
    "Close" : {

    },
    "Court %lld" : {

    },
    "Court %lld:" : {

    },
    "Courts" : {

    },
    "Create Session" : {

    },
    "Details" : {

    },
    "Disable" : {

    },
    "Doubles" : {

    },
    "Enable" : {

    },
    "History" : {

    },
    "Inactive" : {

    },
    "Licensed under GNU GPL v3.0" : {

    },
    "Match %lld" : {

    },
    "Match History" : {

    },
    "My Players" : {

    },
    "Name" : {
      "comment" : "Placeholder title for the Name field in a form",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nombre"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "名前"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "姓名"
          }
        }
      }
    },
    "New Session" : {

    },
    "Next" : {

    },
    "No session" : {

    },
    "Ok" : {

    },
    "Player %lld Name" : {

    },
    "Player Name" : {

    },
    "Players" : {

    },
    "Privacy Policy" : {

    },
    "Quick Add" : {

    },
    "Recent Players" : {

    },
    "Sessions" : {

    },
    "Settings" : {
      "comment" : "Tab bar item title for the Settings tab",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Configuración"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Paramètres"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "Singles" : {

    },
    "Team Size" : {

    },
    "This app is built with the help of the following open source libraries." : {

    },
    "This will add a new player to the session" : {

    },
    "Version %@ (%@)" : {
      "comment" : "Settings label showing the current version of the app",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "new",
            "value" : "Version %1$@ (%2$@)"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Versión %1$@ (%2$@)"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Version %1$@ (%2$@)"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "バージョン %1$@ (%2$@)"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "版本 %1$@ (%2$@)"
          }
        }
      }
    },
    "View on GitHub" : {

    },
    "vs." : {

    },
    "Website" : {

    }
  },
  "version" : "1.0"
}
